--- a/index.html
+++ b/index.html
@@ -17,55 +17,77 @@
       src="https://kit.fontawesome.com/72d0c50021.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <header class="header container-fluid sticky-top">
-      <div
-        class="padreNavHeader row d-flex flex-direction-row justify-content-between"
-      >
+      <div class="padreNavHeader">
         <div class="logoPrincipal col-sm-12 col-lg-5">
           <a href="index.html">
             <img
-              class="logo m-2 rounded-circle"
+              class="logo m-3 rounded-circle"
               src="./assets/img/Logo_gimnasio.jpg"
               alt="Logo del gym"
-              width="70px"
-              height="70px"
             />
           </a>
         </div>
-        <nav class="navHeader col-sm-12 col-lg-7">
-          <ul class="listaNav d-flex list-group-horizontal m-4">
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="#">Inicio</a>
-            </li>
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="./pages/actividades.html"
+        <div class="btn-group menu">
+          <button
+            type="button"
+            class="btn dropdown-toggle"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          ></button>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="#">Inicio</a></li>
+            <li>
+              <a class="dropdown-item" href="./pages/actividades.html"
                 >Actividades</a
               >
             </li>
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="./pages/horarios.html"
-                >Horarios</a
+            <li>
+              <a class="dropdown-item" href="./pages/horarios.html">Horarios</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="./pages/instalacion.html"
+                >Instalacion</a
               >
             </li>
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="./pages/instalacion.html"
-                >Instalación</a
-              >
+            <li>
+              <a class="dropdown-item" href="./pages/contacto.html">Registro</a>
             </li>
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="./pages/contacto.html"
-                >Registro</a
-              >
-            </li>
-            <li class="box text-center list-group-item">
+            <li>
               <a
-                class="text-decoration-none h5"
                 target="_blank"
+                class="dropdown-item"
                 href="https://www.facebook.com"
                 >Facebook</a
               >
+            </li>
+          </ul>
+        </div>
+        <nav class="navHeader col-sm-12 col-lg-7">
+          <ul class="listaNav">
+            <li class="box text-center list-group-item">
+              <a href="#">Inicio</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./pages/actividades.html">Actividades</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./pages/horarios.html">Horarios</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./pages/instalacion.html">Instalación</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./pages/contacto.html">Registro</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a target="_blank" href="https://www.facebook.com">Facebook</a>
             </li>
           </ul>
         </nav>
@@ -74,41 +96,45 @@
 
     <main class="main container">
       <section>
-        <div>
-          <a target="_blank" href="https://www.whatsapp.com">
-            <img
-              class="logoWsp"
-              src="./assets/img/Logo_whatsapp.jpg"
-              alt="Logo de whatsapp"
-            />
-          </a>
-        </div>
+        <a target="_blank" href="https://www.whatsapp.com">
+          <img
+            class="logoWsp"
+            src="./assets/img/Logo_whatsapp.jpg"
+            alt="Logo de whatsapp"
+          />
+        </a>
       </section>
       <section>
-        <h1 class="tituloPrincipal h2 m-4">Comienza hoy una nueva vida</h1>
-        <div>
-          <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">
-            Bienvenidos a Porto Gym, el gimnasio exclusivo para transformar y
-            cuidar la salud de tu cuerpo.
-          </p>
-        </div>
-        <div>
-          <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">
-            Somos un gimnasio el cual llevó a cabo su apertura en el año 2015 y
-            nos sentimos muy orgullosos de ejercer nuestra profesión y de
-            brindarles las mejores rutinas personalizadas para cada uno de
-            ustedes, con precios accesibles y la mejor dedicación para su
-            confortabilidad, en esta pagina detallaremos las actividades que
-            realizamos asi como donde contactárnos, horarios y más...
-          </p>
-        </div>
+        <h1 class="tituloPrincipal h2 m-4 animate__animated animate__bounceIn">
+          Comienza hoy una nueva vida
+        </h1>
+        <p
+          class="tamanioParrafo text-center fs-5 fst-italic lh-lg animate__animated animate__slideInUp"
+        >
+          Bienvenidos a Porto Gym, el gimnasio exclusivo para transformar y
+          cuidar la salud de tu cuerpo.
+        </p>
       </section>
       <section>
-        <h2 class="tituloSub h2 text-center m-4">
+        <p
+          class="tamanioParrafo text-center fs-5 fst-italic lh-lg animate__animated animate__slideInUp"
+        >
+          Somos un gimnasio el cual llevó a cabo su apertura en el año 2015 y
+          nos sentimos muy orgullosos de ejercer nuestra profesión y de
+          brindarles las mejores rutinas personalizadas para cada uno de
+          ustedes, con precios accesibles y la mejor dedicación para su
+          confortabilidad, en esta pagina detallaremos las actividades que
+          realizamos asi como donde contactárnos, horarios y más...
+        </p>
+      </section>
+      <section>
+        <h2
+          class="tituloSub h2 text-center m-4 animate__animated animate__bounceInDown"
+        >
           "Prepárate para el inicio de tu nueva historia"
         </h2>
         <iframe
-          class="video d-block mx-auto my-5 border border-secondary rounded"
+          class="video d-block mx-auto my-5 border border-secondary rounded animate__animated animate__fadeIn"
           width="700"
           height="400"
           src="https://www.youtube.com/embed/xL6BvBUFG4Q"
@@ -119,23 +145,28 @@
         ></iframe>
       </section>
     </main>
-    <footer
-      class="footer container-fluid bg-white d-flex justify-content-center align-items-center"
-    >
-      <p class="piePagina fs-6 my-4">
-        <i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0"></i>
-        Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída
-        Edison (Puerto)<br /><i
-          class="fa-solid fa-envelope fa-xs"
-          style="color: #8b0be0"
-        ></i>
-        Comunícate por mail: portogym@gmail.com<br /><i
-          class="fa-solid fa-phone fa-xs"
-          style="color: #8b0be0"
-        ></i>
-        Teléfono: 2236052120
-      </p>
+    <footer class="footer container-fluid">
+      <div class="piePagina d-flex justify-content-center align-items-center">
+        <p>
+          <i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0"></i>
+          Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y
+          Avenída Edison (Puerto)
+        </p>
+      </div>
+      <div class="piePagina d-flex justify-content-center align-items-center">
+        <p>
+          <i class="fa-solid fa-envelope fa-xs" style="color: #8b0be0"></i>
+          Comunícate por mail: portogym@gmail.com
+        </p>
+      </div>
+      <div class="piePagina d-flex justify-content-center align-items-center">
+        <p>
+          <i class="fa-solid fa-phone fa-xs" style="color: #8b0be0"></i>
+          Teléfono: 2236052120
+        </p>
+      </div>
     </footer>
     <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
