--- a/pages/404.html
+++ b/pages/404.html
@@ -1,58 +1,143 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Error 404 | Págona no encontrada</title>
-        <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/estilos.css">
-        <script src="https://kit.fontawesome.com/72d0c50021.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header class="header container-fluid sticky-top">
-            <div class="padreNavHeader d-flex flex-direction-row justify-content-between">
-                <div class="logoPrincipal col-sm-12 col-lg-5">
-                    <a href="../index.html">
-                        <img class="logo m-2 rounded-circle" src="../assets/img/Logo_gimnasio.jpg" alt="Logo del gym" width="70px" height="70px">
-                    </a>
-                </div>
-                <nav class="navHeader col-sm-12 col-lg-7">
-                    <ul class="listaNav d-flex list-group-horizontal m-4">
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="../index.html">Inicio</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./actividades.html">Actividades</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./horarios.html">Horarios</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./instalacion.html">Instalación</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./contacto.html">Registro</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
-                    </ul>
-                </nav>               
-            </div>
-       </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Error 404 | Págona no encontrada</title>
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/estilos.css" />
+    <script
+      src="https://kit.fontawesome.com/72d0c50021.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header class="header container-fluid sticky-top">
+      <div class="padreNavHeader">
+        <div class="logoPrincipal col-sm-12 col-lg-5">
+          <a href="../index.html">
+            <img
+              class="logo m-3 rounded-circle"
+              src="../assets/img/Logo_gimnasio.jpg"
+              alt="Logo del gym"
+            />
+          </a>
+        </div>
+        <div class="btn-group menu">
+          <button
+            type="button"
+            class="btn dropdown-toggle"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          ></button>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="../index.html">Inicio</a></li>
+            <li>
+              <a class="dropdown-item" href="./actividades.html">Actividades</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="./horarios.html">Horarios</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="./instalacion.html">Instalacion</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="./contacto.html">Registro</a>
+            </li>
+            <li>
+              <a
+                target="_blank"
+                class="dropdown-item"
+                href="https://www.facebook.com"
+                >Facebook</a
+              >
+            </li>
+          </ul>
+        </div>
+        <nav class="navHeader col-sm-12 col-lg-7">
+          <ul class="listaNav">
+            <li class="box text-center list-group-item">
+              <a href="../index.html">Inicio</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./actividades.html">Actividades</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./horarios.html">Horarios</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./instalacion.html">Instalación</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./contacto.html">Registro</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a target="_blank" href="https://www.facebook.com">Facebook</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-       <main class="main container">
-            <section>
-                <div>
-                    <a target="_blank" href="https://www.whatsapp.com">
-                        <img class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle" src="../assets/img/Logo_whatsapp.jpg" width="40px" height="40px">
-                    </a>
-                </div>
-            </section>
-            <div>
-                <h1 class="tituloPrincipal h2 m-4">Error 404</h1>
-            </div>
-            <div>
-                <h2 class="tituloSub h2 text-center m-4">Página no encontrada</h2>
-                <p class="tamanioParrafo fs-5 fst-italic lh-lg text-center">Lo sentimos, la página que estás buscando no esta disponible.</p>
-            </div>
-            <div>
-                <i class="icono fa-solid fa-face-meh fa-shake iconoGrande mt-2 mb-5 d-flex justify-content-center" style="color: #ffffff;"></i>
-            </div>
-       </main>
-       <footer class="footer container-fluid bg-white d-flex justify-content-center align-items-center">
-            <p class="piePagina fs-6 my-4"><i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0;"></i> Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída Edison (Puerto)<br><i class="fa-solid fa-envelope fa-xs" style="color: #8b0be0;"></i> Comunícate por mail: portogym@gmail.com<br><i class="fa-solid fa-phone fa-xs" style="color: #8b0be0;"></i> Teléfono: 2236052120</p>  
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </body>
+    <main class="main container">
+      <section>
+        <a target="_blank" href="https://www.whatsapp.com">
+          <img
+            class="logoWsp"
+            src="../assets/img/Logo_whatsapp.jpg"
+            width="40px"
+            height="40px"
+          />
+        </a>
+      </section>
+      <section>
+        <h1 class="tituloPrincipal h2 m-4">Error 404</h1>
+      </section>
+      <section>
+        <h2 class="tituloSub h2 text-center m-4">Página no encontrada</h2>
+        <p class="tamanioParrafo fs-5 fst-italic lh-lg text-center">
+          Lo sentimos, la página que estás buscando no esta disponible.
+        </p>
+      </section>
+      <section>
+        <i
+          class="icono fa-solid fa-face-meh fa-shake iconoGrande mt-2 mb-5 d-flex justify-content-center"
+          style="color: #ffffff"
+        ></i>
+      </section>
+    </main>
+    <footer class="footer container-fluid">
+      <div class="piePagina d-flex justify-content-center align-items-center">
+        <p>
+          <i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0"></i>
+          Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y
+          Avenída Edison (Puerto)
+        </p>
+      </div>
+      <div class="piePagina d-flex justify-content-center align-items-center">
+        <p>
+          <i class="fa-solid fa-envelope fa-xs" style="color: #8b0be0"></i>
+          Comunícate por mail: portogym@gmail.com
+        </p>
+      </div>
+      <div class="piePagina d-flex justify-content-center align-items-center">
+        <p>
+          <i class="fa-solid fa-phone fa-xs" style="color: #8b0be0"></i>
+          Teléfono: 2236052120
+        </p>
+      </div>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
