--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -22,53 +22,75 @@
       src="https://kit.fontawesome.com/72d0c50021.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  </head>
   </head>
   <body>
     <header class="header container-fluid sticky-top">
-      <div
-        class="padreNavHeader d-flex flex-direction-row justify-content-between"
-      >
+      <div class="padreNavHeader">
         <div class="logoPrincipal col-sm-12 col-lg-5">
           <a href="../index.html">
             <img
-              class="logo m-2 rounded-circle"
+              class="logo m-3 rounded-circle"
               src="../assets/img/Logo_gimnasio.jpg"
               alt="Logo del gym"
-              width="70px"
-              height="70px"
             />
           </a>
         </div>
-        <nav class="navHeader col-sm-12 col-lg-7">
-          <ul class="listaNav d-flex list-group-horizontal m-4">
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="../index.html">Inicio</a>
+        <div class="btn-group menu">
+          <button
+            type="button"
+            class="btn dropdown-toggle"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          ></button>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="../index.html">Inicio</a></li>
+            <li>
+              <a class="dropdown-item" href="#">Actividades</a>
             </li>
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="#">Actividades</a>
+            <li>
+              <a class="dropdown-item" href="./horarios.html">Horarios</a>
             </li>
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="./horarios.html"
-                >Horarios</a
-              >
+            <li>
+              <a class="dropdown-item" href="./instalacion.html">Instalacion</a>
             </li>
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="./instalacion.html"
-                >Instalación</a
-              >
+            <li>
+              <a class="dropdown-item" href="./contacto.html">Registro</a>
             </li>
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="./contacto.html"
-                >Registro</a
-              >
-            </li>
-            <li class="box text-center list-group-item">
+            <li>
               <a
-                class="text-decoration-none h5"
                 target="_blank"
+                class="dropdown-item"
                 href="https://www.facebook.com"
                 >Facebook</a
               >
+            </li>
+          </ul>
+        </div>
+        <nav class="navHeader col-sm-12 col-lg-7">
+          <ul class="listaNav">
+            <li class="box text-center list-group-item">
+              <a href="../index.html">Inicio</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="#">Actividades</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./horarios.html">Horarios</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./instalacion.html">Instalación</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./contacto.html">Registro</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a target="_blank" href="https://www.facebook.com">Facebook</a>
             </li>
           </ul>
         </nav>
@@ -77,70 +99,76 @@
 
     <main class="main container">
       <section>
-        <div>
-          <a target="_blank" href="https://www.whatsapp.com">
-            <img
-              class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle"
-              src="../assets/img/Logo_whatsapp.jpg"
-              alt="Logo de whatsapp"
-            />
-          </a>
-        </div>
+        <a target="_blank" href="https://www.whatsapp.com">
+          <img
+            class="logoWsp"
+            src="../assets/img/Logo_whatsapp.jpg"
+            alt="Logo de whatsapp"
+          />
+        </a>
       </section>
       <section>
-        <h1 class="tituloPrincipal h2 m-4">Excelentes rutinas</h1>
+        <h1 class="tituloPrincipal h2 m-4 animate__animated animate__bounceIn">Excelentes rutinas</h1>
         <img
-          class="imagenes d-block mx-auto border border-4 border-white rounded"
+          class="imagenes d-block mx-auto border border-4 border-white rounded animate__animated animate__fadeIn"
           src="../assets/img/Actividades.webp"
           alt="Foto de actividades"
         />
       </section>
       <section>
-        <h2 class="tituloSub h2 text-center m-4">
+        <h2 class="tituloSub h2 text-center m-4" data-aos="fade-right">
           Entrenamiento personalizado:
         </h2>
-        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">
+        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg" data-aos="fade-left">
           Dependiendo de la condición y los objetivos de cada persona se le
           asigna una rutina en particular, con la mejor atención.
         </p>
       </section>
       <section>
-        <h2 class="tituloSub h2 text-center m-4">Clases de spinning:</h2>
-        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">
+        <h2 class="tituloSub h2 text-center m-4" data-aos="fade-right">Clases de spinning:</h2>
+        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg" data-aos="fade-left">
           Contamos con clases de spinning con dos franjas horarias distintas, de
           mañana y de tarde, con equipamiento de alta calidad para brindarles el
           mejor servicio.
         </p>
       </section>
       <section>
-        <h2 class="tituloSub h2 text-center m-4">Clases de pilates:</h2>
-        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg mb-5">
+        <h2 class="tituloSub h2 text-center m-4" data-aos="fade-right">Clases de pilates:</h2>
+        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg mb-5" data-aos="fade-left">
           Y por supuesto tambien contamos con clases de pilates en una sola
           franja horaria con la mejor atención y predisposición.
         </p>
       </section>
     </main>
-    <footer
-      class="footer container-fluid bg-white d-flex justify-content-center align-items-center"
-    >
-      <p class="piePagina fs-6 my-4">
-        <i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0"></i>
-        Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída
-        Edison (Puerto)<br /><i
-          class="fa-solid fa-envelope fa-xs"
-          style="color: #8b0be0"
-        ></i>
-        Comunícate por mail: portogym@gmail.com<br /><i
-          class="fa-solid fa-phone fa-xs"
-          style="color: #8b0be0"
-        ></i>
-        Teléfono: 2236052120
-      </p>
+    <footer class="footer container-fluid">
+      <div class="piePagina d-flex justify-content-center align-items-center">
+        <p>
+          <i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0"></i>
+          Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y
+          Avenída Edison (Puerto)
+        </p>
+      </div>
+      <div class="piePagina d-flex justify-content-center align-items-center">
+        <p>
+          <i class="fa-solid fa-envelope fa-xs" style="color: #8b0be0"></i>
+          Comunícate por mail: portogym@gmail.com
+        </p>
+      </div>
+      <div class="piePagina d-flex justify-content-center align-items-center">
+        <p>
+          <i class="fa-solid fa-phone fa-xs" style="color: #8b0be0"></i>
+          Teléfono: 2236052120
+        </p>
+      </div>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
