--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,51 +22,74 @@
       src="https://kit.fontawesome.com/72d0c50021.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <header class="header container-fluid sticky-top">
-      <div
-        class="padreNavHeader d-flex flex-direction-row justify-content-between"
-      >
+      <div class="padreNavHeader">
         <div class="logoPrincipal col-sm-12 col-lg-5">
           <a href="../index.html">
             <img
-              class="logo m-2 rounded-circle"
+              class="logo m-3 rounded-circle"
               src="../assets/img/Logo_gimnasio.jpg"
               alt="Logo del gym"
             />
           </a>
         </div>
-        <nav class="navHeader col-sm-12 col-lg-7">
-          <ul class="listaNav d-flex list-group-horizontal m-4">
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="../index.html">Inicio</a>
+        <div class="btn-group menu">
+          <button
+            type="button"
+            class="btn dropdown-toggle"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          ></button>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="../index.html">Inicio</a></li>
+            <li>
+              <a class="dropdown-item" href="./actividades.html">Actividades</a>
             </li>
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="./actividades.html"
-                >Actividades</a
-              >
+            <li>
+              <a class="dropdown-item" href="./horarios.html">Horarios</a>
             </li>
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="./horarios.html"
-                >Horarios</a
-              >
+            <li>
+              <a class="dropdown-item" href="./instalacion.html">Instalacion</a>
             </li>
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="./instalacion.html"
-                >Instalación</a
-              >
+            <li>
+              <a class="dropdown-item" href="#">Registro</a>
             </li>
-            <li class="box text-center list-group-item">
-              <a class="text-decoration-none h5" href="#">Registro</a>
-            </li>
-            <li class="box text-center list-group-item">
+            <li>
               <a
-                class="text-decoration-none h5"
                 target="_blank"
+                class="dropdown-item"
                 href="https://www.facebook.com"
                 >Facebook</a
               >
+            </li>
+          </ul>
+        </div>
+        <nav class="navHeader col-sm-12 col-lg-7">
+          <ul class="listaNav">
+            <li class="box text-center list-group-item">
+              <a href="../index.html">Inicio</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./actividades.html">Actividades</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./horarios.html">Horarios</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="./instalacion.html">Instalación</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a href="#">Registro</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a target="_blank" href="https://www.facebook.com">Facebook</a>
             </li>
           </ul>
         </nav>
@@ -75,26 +98,31 @@
 
     <main class="main container">
       <section>
-        <div>
-          <a target="_blank" href="https://www.whatsapp.com">
-            <img
-              class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle"
-              src="../assets/img/Logo_whatsapp.jpg"
-              alt="Logo de whatsapp"
-            />
-          </a>
-        </div>
+        <a target="_blank" href="https://www.whatsapp.com">
+          <img
+            class="logoWsp"
+            src="../assets/img/Logo_whatsapp.jpg"
+            alt="Logo de whatsapp"
+          />
+        </a>
       </section>
       <section>
-        <h1 class="tituloPrincipal h2 m-4">
+        <h1 class="tituloPrincipal h2 m-4 animate__animated animate__bounceIn">
           Coloque sus datos y coméntenos su situación
         </h1>
-        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg m-4">
+        <p
+          class="tamanioParrafo text-center fs-5 fst-italic lh-lg m-4 animate__animated animate__fadeIn"
+        >
           Ingrese sus datos personales y coméntenos si alguna vez realizó
           actividad física, si lo hizo cuánto tiempo paso de ello y cuáles son
           sus objetivos o metas. Nos pondremos en contacto en breve.
         </p>
-        <form class="formulario" action="./404.html">
+      </section>
+      <section>
+        <form
+          class="formulario animate__animated animate__shakeY"
+          action="./404.html"
+        >
           <div>
             <label for="nombre" class="fuenteFormulario fs-5"
               >Ingrese su nombre</label
@@ -133,9 +161,12 @@
         </form>
       </section>
       <section>
-        <h2 class="tituloSub h2 text-center m-4">Cómo encontrarnos</h2>
+        <h2 class="tituloSub h2 text-center m-4" data-aos="fade-up">
+          Cómo encontrarnos
+        </h2>
         <iframe
           class="mapa d-block mx-auto my-5 rounded"
+          data-aos="flip-down"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.2072453846886!2d-57.5472803!3d-38.0422571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dddbf8dad131%3A0xce01f3bb0c59a2e5!2sAcha%20%26%2012%20de%20Octubre%2C%20Mar%20del%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1686321542163!5m2!1ses-419!2sar"
           width="700"
           height="400"
@@ -146,27 +177,35 @@
         ></iframe>
       </section>
     </main>
-    <footer
-      class="footer container-fluid bg-white d-flex justify-content-center align-items-center"
-    >
-      <p class="piePagina fs-6 my-4">
-        <i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0"></i>
-        Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída
-        Edison (Puerto)<br /><i
-          class="fa-solid fa-envelope fa-xs"
-          style="color: #8b0be0"
-        ></i>
-        Comunícate por mail: portogym@gmail.com<br /><i
-          class="fa-solid fa-phone fa-xs"
-          style="color: #8b0be0"
-        ></i>
-        Teléfono: 2236052120
-      </p>
+    <footer class="footer container-fluid">
+      <div class="piePagina d-flex justify-content-center align-items-center">
+        <p>
+          <i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0"></i>
+          Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y
+          Avenída Edison (Puerto)
+        </p>
+      </div>
+      <div class="piePagina d-flex justify-content-center align-items-center">
+        <p>
+          <i class="fa-solid fa-envelope fa-xs" style="color: #8b0be0"></i>
+          Comunícate por mail: portogym@gmail.com
+        </p>
+      </div>
+      <div class="piePagina d-flex justify-content-center align-items-center">
+        <p>
+          <i class="fa-solid fa-phone fa-xs" style="color: #8b0be0"></i>
+          Teléfono: 2236052120
+        </p>
+      </div>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
